=================
Changes for crash
=================

Unreleased
==========

 - Start autocompletion for non-command keys at the 3rd character.

2017/07/24 0.21.4
=================

 - Fixed: ``\verbose`` command didn't not switch on verbosity if ``crash`` was
   launched without the ```--verbose` flag.

2017/07/11 0.21.3
=================

 - Expanded the list of keywords used by autocompletion and
   autocapitalization.

2017/07/06 0.21.2
=================

 - Fixed bug that caused ``crash`` to crash on startup when using Python 2.7.

2017/07/04 0.21.1
=================

 - Expanded the list of keywords used by autocompletion and
   autocapitalization.

 - Show error message before prompting the user to reconnect with ``\connect``
   if the ``verbose`` is set.

 - Added new command ``verbose`` to be able to toggle verbosity ON & OFF from
   within Crash without the need to exit and reconnect.

 - Print only error message instead of full stacktrace in case of wrongly
   formatted hosts parameter.

 - Try to connect to the CrateDB hosts before entering the Crash prompt also
   if the ``--verbose`` flag is not set.

 - Check if certificate related files exist and have read permissions before
   entering Crash prompt.

2017/06/27 0.21.0
=================

 - Print only error message instead of full stacktrace in case of connection
   error.

 - Added support for SSL connection to CrateDB.

 - Added new parameter ``username`` used to authenticate the user in CrateDB.

 - Improved queries for ``sysinfo`` command

 - Expanded the list of keywords used by autocompletion and
   autocapitalization.

 - Automatically capitalize keywords while typing, e.g. ``select`` -> ``SELECT``
   **This feature is experimental and turned off by default. It may be removed
   in future versions!**

 - Automatically suggest and complete to ``UPPERCASE`` keywords
   when using autocomplete.

 - Added support for opening an editor to edit the current command.